RESOLVED FIXED94390
REGRESSION (r125912): Crashes in worker tests
https://bugs.webkit.org/show_bug.cgi?id=94390
Summary REGRESSION (r125912): Crashes in worker tests
Alexey Proskuryakov
Reported 2012-08-17 16:06:17 PDT
Not every global object is a window.
Attachments
proposed fix (1.97 KB, patch)
2012-08-17 16:08 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2012-08-17 16:08:54 PDT
Created attachment 159220 [details] proposed fix
Sam Weinig
Comment 2 2012-08-17 16:15:44 PDT
Comment on attachment 159220 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=159220&action=review > Source/WebCore/bindings/js/JSDOMBinding.cpp:167 > + ScriptExecutionContext* scriptExecutionContext = globalObject->scriptExecutionContext(); > + scriptExecutionContext->reportException(ustringToString(errorMessage), lineNumber, ustringToString(exceptionSourceURL), 0); I think this can go on one line.
Alexey Proskuryakov
Comment 3 2012-08-17 16:28:12 PDT
Note You need to log in before you can comment on or make changes to this bug.