        REGRESSION (r125912): Crashes in worker tests         https://bugs.webkit.org/show_bug.cgi?id=94390

Reviewed by Brady Eidson and Sam Weinig.

        * bindings/js/JSDOMBinding.cpp: (WebCore::reportException): It's always fine
        to report an exception on a worker context, but it's not fine to treat those as windows.



Canonical link: https://commits.webkit.org/112196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125946 268f45cc-cd09-0410-ab3c-d52691b4dbfc